# osintkit

./: .gitignore  .npmignore  01_PRD.md  02_Architecture.md  03_AI_Rules.md  04_Build_Plan.md  LICENSE  README.md  STATUS.md  TEST_REPORT.md  package.json  postinstall.js  pyproject.toml  requirements-tools.txt  requirements.txt
.claude-flow/data/: pending-insights.jsonl
.github/workflows/: ci.yml  npm-publish.yml
osintkit/: __init__.py  __main__.py  cli.py  config.py  profiles.py  risk.py  scanner.py  setup.py  startup.py
osintkit/modules/: __init__.py  breach.py  brokers.py  certs.py  dark_web.py  emailrep.py  gravatar.py  harvester.py  hibp.py  hibp_kanon.py  holehe.py  ipinfo.py  libphonenumber_info.py  paste.py  phone.py  sherlock.py  shodan_internetdb.py  social.py  threatfox.py  urlscan.py  wayback.py  whois_lookup.py
osintkit/modules/stage2/: __init__.py  abuseipdb.py  epieos.py  github_api.py  greynoise.py  hunter.py  intelligencex.py  leakcheck.py  netlas.py  numverify.py  otx.py  pulsedive.py  securitytrails.py  virustotal.py
osintkit/output/: __init__.py  html_writer.py  json_writer.py  md_writer.py
osintkit/output/templates/: report.html
tests/: comprehensive_qa_test.py  conftest.py
tests/security/: test_no_key_leak.py
tests/unit/: test_gravatar.py  test_libphonenumber.py  test_new_modules.py  test_output_md.py  test_scanner.py  test_v2_modules.py
